# Online-Attendance

./: .gitignore  pyproject.toml
src/: __init__.py  auth.py  models.py  views.py
src/static/css/: homepage.css  index.css  login.css
src/templates/: base.html  classes.html  index.html  login.html  profile.html  signup.html
