[tool.poetry]
name = "onlineattendence"
version = "0.1.0"
description = "Online Attendance System using Python and Flask"
authors = ["Nishant Sapkota <snishant306@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.2"
Flask-SQLAlchemy = "^2.5.1"
Flask-Login = "^0.5.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
